css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}
.ar *{
    font-family: 'Tajawal', sans-serif;
    font-weight: 300;
}
 .ar>h3{
    font-weight: 700;
}
b{
    font-weight: 700;
}

h1{
    color: white;
}
html{
    scroll-behavior: smooth;
}

.header{
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.5),rgba(19, 26, 58, 0.5)),url(../image/backg.jpg);
    background-size: cover;
    background-position: center;
    position: relative;
}

nav{
    display: flex;
    padding: 1.7% 6%;
    justify-content: space-between;
    align-items: center;
    background-color: #080c26;
    position: fixed;
    top: 0;
    width: 90%;
    z-index: 5;
}

nav img{
    width: 150px;
}

.nav-links{
    flex: 1;
    text-align: right;
}

.nav-links ul li{
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}

.nav-links ul li a{
    color: rgb(183, 38, 154);
    text-decoration: none;
    font-size: large;
    font-weight: 700;
}

.nav-links ul li::after{
    content: "";
    width: 0%;
    height: 2px;
    background: rgb(99, 168, 210);
    display: block;
    margin: auto;
    transition: 0.5s;
}

.nav-links ul li:hover::after{
    width: 100%;
}

.text-box{
    width: 70%;
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    background-color: #ffffff10;
    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border-radius: 25px;
}

.text-box h1{
    font-size: 62px;
    margin: 10px 10px;
    background: rgb(159,42,236);
    background: linear-gradient(344deg, rgba(159,42,236,1) 0%, rgba(179,34,123,1) 51%, rgba(223,25,211,1) 100%);
    background-clip: border-box;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
}
.soon{
    width: 50%;
}
.soon h1{
    font-size: 46px;
    margin: 10px 10px;
}

.text-box p{
    margin: 10px 0 40px;
    font-size: 16px;
    font-weight: 400;
    color: white;
}
b{
    font-weight: 700;
    font-style:oblique;
}

.btn{
    display: inline-block;
    text-decoration: none;
    color: white;
    border: 1px solid white;
    padding: 10px 28px;
    font-size: 18px;
    background: transparent;
    position: relative;
    cursor: pointer;
    margin-bottom: 14px;
    border-radius: 12px;
    font-weight: 400;
}
.btn:hover{
    border: 1px solid rgb(183, 38, 154);
    background: rgb(183, 38, 154);
    transition: .5s;
}

nav .fa{
   display: none;
}

@media(max-width: 700px){
    .text-box h1{
        font-size: 28px;
        margin: 20px;
    }
    .nav-links ul li{
        display: block;
    }

    .btn{
        display: inline-block;
        text-decoration: none;
        color: white;
        border: 1px solid white;
        padding: 7px 18px;
        font-size: 15px;
        background: transparent;
        position: relative;
        cursor: pointer;
        margin-bottom: 14px;
        border-radius: 12px;
        font-weight: 400;
    }

    .nav-links {
        position: absolute;
        background-color: #080c26;
        /*  background-color: #ffffff10;  */
        backdrop-filter: blur(32px);
        -webkit-backdrop-filter: blur(32px);
        height: 100vh ;
        width: 55%;
        top: 0;
        right: -55%;
        text-align: left;
        z-index: 2;
        transition: .5s; 
    }

    nav .fa{
        display: block;
        color: rgb(183, 38, 154);
        margin: 10px;
        font-size: 22px;
        cursor: pointer;
    }
    .nav-links ul{
        padding: 5px 50px;
    }

    .row{
        flex-direction: column;
    }
}

main{
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(19, 26, 58, 0.5),rgba(12, 19, 51, 0.5)),url(../image/backgsimple.jpg);
    background-size: cover;
    background-position: center;
    position: relative;
}

.course{
    width: 80%;
    text-align: center;
    margin: auto;
    padding-top: 50px;
    color: white;
}
h1{
    font-size: 50px;
    font-weight: 700;
    background: rgb(159,42,236);
    background: linear-gradient(344deg, rgba(159,42,236,1) 0%, rgba(179,34,123,1) 51%, rgba(223,25,211,1) 100%);
    background-clip: border-box;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
}

.course h1{
    margin-bottom: 20px;
}

p{
    font-size: 16px;
    font-weight: 400;
    line-height: 22px;
    padding: 10px;
}

.row{
    margin-top: 5%;
    display: flex;
    justify-content: space-between;
}

.course-col{
    flex-basis: 31%;
    background: rgb(156, 38, 130);
    border-radius: 10px;
    margin-bottom: 5%;
    padding: 20px 12px;
    box-sizing: border-box;
    transition: 0.5s;
}
h3{
    text-align: center;
    font-weight: 600;
    font-style: bold;
    margin: 10px;
}

.course-col:hover{
    box-shadow: 0 0 20px 0px rgba(244, 239, 239, 0.4);
}

.qt{
    width: 80%;
    margin: auto;
    text-align: center;
    padding-top: 50px;
    color: white;
}
.qt h1{
    margin-bottom: 20px;
}

.takeqt{
    display: inline-block;
    text-decoration: none;
    color: white;
    border: 1px solid white;
    padding: 10px 28px;
    font-size: 18px;
    background: transparent;
    position: relative;
    cursor: pointer;
    margin-top: 25px;
    margin-bottom: 14px;
    border-radius: 12px;
    font-weight: 400;
}
.takeqt:hover{
    border: 1px solid rgb(183, 38, 154);
    background: rgb(183, 38, 154);
    transition: .5s;
}

hr{
    border: 2px solid rgb(156, 38, 130);
    width: 80%;
    margin-top: 100px;
    margin-bottom: 70px;
    margin-left: 10%;
    margin-right: 10%;
}

.footer{
    width: 100%;
    text-align: center;
    color: white;
    padding: 30px 0;
}

.footer h2{
    margin-bottom: 25px;
    font-weight: 600;
}

